# team-2-backend

./: Dockerfile  pyproject.toml
src/: main.py
src/openai_api/: app.py
